Changed the way secrets are stored.

--- a/paulbadman/compose.yml
+++ b/paulbadman/compose.yml
@@ -2,7 +2,4 @@ services:
   paulbadman:
     build: .
     environment:
-      - DISCORD_TOKEN
-secrets:
-  DISCORD_TOKEN:
-    file: ./DISCORD.env
+      - DISCORD_TOKEN=${DISCORD_TOKEN}
